fix: empty account id on password auth

--- a/templates/login.html.tmpl
+++ b/templates/login.html.tmpl
@@ -164,7 +164,7 @@ figure {
             </form>
             <form action="{{ .BaseUrl }}/loginWithPassword" method="post">
                 <div class="group">
-                    <input type="text" required name="accountId" placeholder="Account ID">
+                    <input type="text" required name="account_id" placeholder="Account ID">
                     <span class="bar"></span>
                     <label>Account ID</label>
                 </div>
