--- a/templates/home.html.tmpl
+++ b/templates/home.html.tmpl
@@ -70,10 +70,12 @@
     {{ else }}
     <div class="resp-table">
         <div class="resp-table-body">
+            {{ if .Phone }}
             <div class="resp-table-row">
                 <div class="table-body-cell">Номер телефона:</div>
                 <div class="table-body-cell">+{{ .Phone }}</div>
             </div>
+            {{ else }}
             {{ range $_, $placeEl := .Places.Data }}
             {{ range $index, $ac := $placeEl.Place.AccessControls }}
             {{$snapshotUrl := getSnapshotUrl $.BaseUrl $placeEl.Place.ID $ac.ID }}
