fix:  update open-door rest template for home-assistant (#14)
* fix: phone on web

* fix: rest template for HA

* fix: web if else for phone

--- a/templates/home.html.tmpl
+++ b/templates/home.html.tmpl
@@ -70,15 +70,17 @@
     {{ else }}
     <div class="resp-table">
         <div class="resp-table-body">
+            {{ if .Phone }}
             <div class="resp-table-row">
                 <div class="table-body-cell">Номер телефона:</div>
                 <div class="table-body-cell">+{{ .Phone }}</div>
             </div>
+            {{ end }}
             {{ range $_, $placeEl := .Places.Data }}
             {{ range $index, $ac := $placeEl.Place.AccessControls }}
             {{$snapshotUrl := getSnapshotUrl $.BaseUrl $placeEl.Place.ID $ac.ID }}
             {{$streamUrl := "Camera for this index not found ;("}}
-			{{ with (index $.Cameras.Data $index) }}
+            {{ with (index $.Cameras.Data $index) }}
                 {{$streamUrl = getCameraStreamUrl $.BaseUrl .ID }}
             {{ end }}
             {{$openDoorUrl := getOpenDoorUrl $.BaseUrl $placeEl.Place.ID $ac.ID }}
@@ -118,6 +120,10 @@ rest_command:
     domru_open_door:
         url: {{ $openDoorUrl }}
         method: post
+        headers:
+            accept: "application/json"
+        content_type:  'application/json; charset=utf-8'
+        payload: '{"name":"accessControlOpen"}'
 
 camera:
     - platform: generic
